# python-project-lvl2

./: .coverage  .gitignore  Commands_for_CLI.txt  Makefile  README.md  coverage.xml  main_script.py  pyproject.toml
.github/workflows/: README.md  hexlet-check.yml  main.yml  project2_test.yml
gendiff/: .coverage  __init__.py  check_file_extention.py  gendiff.py  gendiff_file.py  gendiff_launcher.py  get_data_from_file.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: check_file_extention.py  check_file_format.py  file1.json  files_check.py  formatters.py  gendiff.py  gendiff_launcher.py  stylish.py
main_code/: gendiff.py
test_folder/: main_script.py
tests/: .coverage  coverage.xml  tests.py  tests_for_JSON.py  tests_for_YAML.py
tests/answers/: _formatter_JSON.txt  _formatter_stylish.txt  file_extention.txt  generate_diff_result.txt
tests/fixtures/: file1.json  file1new.json  file1new.yml  file2new.json  files_check_tests.py  testyaml.py
tests/fixtures/files/: file2.json
tests/fixtures/test_formatter_json/: answer.txt  file2recursive.json
tests/fixtures/test_recursive_JSON_YAML/: answer.txt
tests/fixtures/yaml_files/: file1recursive.yml  file2recursive.yml
