[tool.poetry]
name = "NeoVic2006-project-CLI"
version = "0.5.1"
description = "All tests for step 4 DONE"
authors = ["Sergey Vengilevskiy <NeoVic2006@gmail.com>"]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
PyYAML = "^5.3.1"
pytest = "^6.1.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_launcher:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
