[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "All functions are done"
authors = ["Sergey Vengilevskiy <NeoVic2006@gmail.com>"]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
PyYAML = "^5.3.1"
pytest = "^6.1.2"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
